tests/foreign_directives_wasm_backend_c_import_bad.stderr
tests/foreign_directives_wasm_backend_c_import_bad.hop:1:1: error: HOP3002: Wasm backend does not support this MIR: @c_import is not supported by the direct Wasm backend
