tests/foreign_directives_wasm_backend_c_import_bad.hop
@c_import("helper")
fn helper(v i32) i32

fn main() i32 {
	return helper(4)
}
